@@ -13,4 +13,4 @@ Create a single-page app in a single HTML file with the following requirements:
 - when the user guesses all the letters in the word, the game is over. Tell them that they won!
 - when the game is over, tell them they can hit enter to play again. That is shown directly below the box that showed the guessed letters. Once they hit enter, it will start like the very beginning with a different word.
 - keep the UI at a minimum. Only implement the UI elements that I have asked for.
-- there should be a list of 100 different words that the game uses for the player to guess. For each game, the word is chosen randomly. All words must be between 6 to 10 characters long. All words must each have at least 5 different letters. All words must be among the top 5000 most commonly used words in English. All words must use United States style spelling. 
+- there should be a list of 200 different words that the game uses for the player to guess. For each game, the word is chosen randomly. All words must be between 6 to 10 characters long. All words must each have at least 5 different letters. All words must be among the top 5000 most commonly used words in English. All words must use United States style spelling. 
