@@ -124,19 +124,42 @@
 
 <script>
 /* ------------------------------
-   100 COMMON, 6–10 LETTER WORDS
+   200 COMMON, 6–10 LETTER WORDS
    ------------------------------ */
 const WORDS = [
-"ACCOUNT","ACQUIRE","ADDRESS","ADVANCE","AFFAIR","AMOUNT","ANALYST","ANCIENT","ANXIETY","ARTICLE",
-"BALANCE","BARRIER","BATTERY","BEHAVIOR","BENEATH","BENEFIT","BORDERS","BROTHER","CABINET","CAPTURE",
-"CARRIER","CENTRAL","CERTAIN","CHAMBER","CHAPTER","CHARITY","CITIZEN","COLLEGE","COMFORT","COMMAND",
-"COMPANY","CONCEPT","CONCERN","CONFIRM","CONSUME","CONTRACT","CORRECT","CREATOR","CURRENT","DAMAGE",
-"DANGEROUS","DEGREE","DELIGHT","DELIVER","DEMAND","DEPART","DISCUSS","DISCOVER","DISPLAY","DISTANT",
-"DRAINAGE","EDUCATE","ELECTION","ELEMENT","EMERGE","ENJOYED","EXAMPLE","EXCITED","EXPLAIN","FACTORY",
-"FASHION","FEATURE","FICTION","FOREIGN","FORWARD","FORTUNE","FOUNDATION","FUNCTION","GALLERY","GENTLE",
-"HARMONY","HELPFUL","HOLIDAY","HOSPITAL","IMPROVE","INCLUDE","INITIAL","INQUIRY","INSIGHT","JOURNAL",
-"KITCHEN","LANGUAGE","MATERIAL","MEASURE","MESSAGE","MINIMAL","NATURAL","OFFICER","PACKAGE","PERHAPS",
-"QUALITY","RAILWAY","RECEIVE","SCIENCE","SECTION","STATION","TEACHER","THEATER","WEATHER","WITHOUT"
+"ACCOUNT","ACQUIRE","ADDRESS","ADVICE","ALMOST","AMOUNT","ANALYST","ANCIENT","ANYONE","ARRIVE",
+"AROUND","ARTICLE","BALANCE","BARRIER","BATTERY","BEHAVIOR","BENEFIT","BESIDES","BETWEEN","BOTTLE",
+"BRANCH","BRIDGE","BROTHER","CABINET","CAPABLE","CAPTURE","CARRIER","CENTRAL","CERTAIN","CHAMBER",
+"CHANCE","CHAPTER","CHARITY","CHEMIST","CHOSEN","CIRCUIT","CITIZEN","CLIMATE","CLOTHES","COLLEGE",
+"COMFORT","COMMAND","COMPANY","COMPLETE","CONCEPT","CONCERN","CONFIRM","CONNECT","CONSIST","CONTACT",
+"CONTAIN","CONTENT","CONTEXT","CONTROL","CONVERT","CORRECT","COUNTRY","COUPLE","COURAGE","COURSE",
+"COVERED","CREATOR","CRITICAL","CURRENT","CUSTOMS","DAMAGE","DANGER","DEBATE","DECENT","DECIDE",
+"DECLARE","DEFINE","DELIVER","DELIGHT","DENSITY","DEPART","DEPOSIT","DESERT","DESIGN","DESIRE",
+"DETAILS","DEVELOP","DEVICE","DIAMOND","DIFFER","DIGITAL","DIRECT","DISCUSS","DISPLAY","DISTANT",
+"DISTRICT","DRIVER","EDITION","ELEMENT","EMOTION","EMPIRE","EMPLOY","ENFORCE","ENOUGH","ENSURE",
+"ENTIRE","ERASED","EVIDENT","EXAMPLE","EXCLUDE","EXPECT","EXPERT","EXPLAIN","EXPLORE","EXTEND",
+"EXTREME","FACTORY","FAILURE","FASHION","FEATURE","FEELING","FELLOW","FEMALE","FIGURE","FINALLY",
+"FINANCE","FINGER","FOREIGN","FOREST","FORWARD","FOUNDED","FREEDOM","FRIENDS","FUNCTION","GARDENS",
+"GENERAL","GENETIC","GENUINE","GOVERN","GRADUAL","GRANTED","GRAVITY","GROUND","HARMONY","HEALTHY",
+"HEARING","HELPFUL","HISTORY","HONESTY","HOUSING","HUMANITY","HUNTERS","IMAGINE","IMPACT","IMPOSED",
+"IMPULSE","INCLUDE","INDUSTRY","INITIAL","INQUIRE","INSIGHT","INSPIRE","INTENSE","INTEREST","INTERNAL",
+"INVENT","INVOLVE","JOURNAL","JUSTICE","KITCHEN","LANGUAGE","LAUGHTER","LEARNER","LECTURE","LIBRARY",
+"LIGHTLY","LIMITED","LOOKING","MACHINE","MAGAZINE","MANAGED","MARKETS","MATERIAL","MEANING","MEASURE",
+"MEMBERS","MENTION","MESSAGE","MIDDLE","MIRACLE","MISTAKE","MOMENT","MORNING","MOTION","MUSEUMS",
+"NARRATE","NATIVE","NATURAL","NEITHER","NETWORK","NOTHING","NOTICE","NUMBER","OBJECTS","OFFICER",
+"OPENING","OPERATE","OPINION","OPTIONS","ORGANIC","OUTCOME","OUTSIDE","PACKAGE","PAINTED","PASSAGE",
+"PATIENT","PATTERN","PAYMENT","PERCENT","PERFECT","PICTURE","PLANNER","PLASTIC","PLAYERS","PLEASE",
+"POINTED","POLICY","POPULAR","PREVENT","PRIMARY","PRIVATE","PROCEED","PROCESS","PRODUCT","PROGRAM",
+"PROJECT","PROMOTE","PROGRESS","PROBLEM","PROVIDE","PURPOSE","QUALITY","RADIANT","REACHES","READING",
+"REALITY","RECEIVE","RECORDS","REFLECT","REGULAR","RELATED","REMEMBER","RESEARCH","RESPECT","RESULTS",
+"RETURN","REVIEW","ROUTINE","SATISFY","SCHEDULE","SCHOOL","SCIENCE","SECTOR","SENDING","SERVICE",
+"SETTING","SHARING","SHORTLY","SILENCE","SIMILAR","SIMPLE","SITUATE","SKETCH","SLEEPER","SOLIDLY",
+"SOLUTION","SOMETIME","SPEAKER","SPECIAL","STATION","STUDENT","SUBJECT","SUGGEST","SUPPLY","SUPPORT",
+"SUSTAIN","SYMBOLIC","TACTICS","TALENTS","TEACHER","TENSION","TEXTURE","THEATER","THOUGHT","TICKET",
+"TRAINER","TRANSFER","TRIANGLE","TROUBLE","ULTIMATE","UNABLE","UNIFORM","UNITED","UNIVERSITY","UPCOMING",
+"USUALLY","VACATION","VALIDATE","VARIOUS","VEHICLE","VERTICAL","VISION","VISIBLE","VOLCANO","WARMTH",
+"WEALTHY","WEATHER","WELCOME","WHATEVER","WHEREAS","WHETHER","WITNESS","WORKING","WRITING","YELLOW",
+"YOUNGER","ZIGZAGLY","ZOOTONIC"
 ];
 
 /* State */
