@@ -53,7 +53,14 @@ Same as last time, simple changes. Today, remove underlines for correctly guesse
 change worked!
 
 
-TODO increased words from 100 to 200. 
+version 7	8 minutes dev	3 minute code gen	3 minute test		1 hour 41 min total
+
+Same as last time, a simple change. For this one, increase the list of 100 words to 200. This was 
+not easy! It would require follow-up questions, it would change the look and feel. Unnecessary.
+I had it generate code with 200 words, and pasted it to version 6.
+
+
+TODO a quick look contains some dubious Top 5000 words. ZIGZAGLY comes to mind. Fix, manually or AI?
 TODO some people like the guesses shown in alpha order. Some like chrono. Support switching; start
 	with chrono
 
